# DEVOPS

./: README.md
DEVOPS/: README.md  main.py  pyproject.toml  test_agents.py
DEVOPS/agents/: devops_agents.py
DEVOPS/tasks/: devops_tasks.py
DEVOPS/tools/: shell_tool.py
